--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "start:api": "npm run -w api dev",
     "start:client": "npm run -w client start",
     "dev": "npm start",
-    "test": "npm run -w client test",
+    "test:server": "jest --selectProjects api",
+    "test:client": "npm run -w client test",
     "api-no-watch": "npm run -w api dev:no-watch"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6"
+  },
+  "dependencies": {
+    "express-rate-limit": "^7.5.0",
+    "node-cache": "^5.1.2",
+    "react-router-dom": "^6.29.0"
   }
 }
